# controle-certidao

./: .gitignore  README.md  package-lock.json  package.json
public/relatorio/: RelatorioApenasFicha.html  RelatorioComFicha.html  RelatorioNota.html  RelatorioSemFicha.html  ficha-dispensa.html  ficha-pregao.html  relatorio-checklist.html
src/: App.js  index.css  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: certidoes.rs  db.rs  fornecedores.rs  main.rs  models.rs  notas.rs  plugin.rs  portaria.rs  setores.rs  upload_drive.rs  vencimentos.rs
src/components/: CalendarioAgenda.js  ListaTarefas.js  Sidebar.js  TabelaCertidoes.js
src/pages/: BuscaCertidoes.js  CadastroCertidao.js  CadastroFornecedor.js  CadastroNotas.js  Checklist.js  FichaFiscalizacao.js  Home.js
